@@ -40,6 +40,6 @@
       }
    },
    "release_status" : "stable",
-   "version" : "0.5004",
+   "version" : "0.5005",
    "x_serialization_backend" : "JSON::PP version 2.27400"
 }
