@@ -14,18 +14,18 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 a0332221853e57bd8c83586a0ae0c4af0bcf2bd4 CHANGES
+SHA1 da003dc4f79436dbc963766c29a15bd03d9c1a9b CHANGES
 SHA1 58d7a00ab2a9f5448a561d49b5a2077efa245ac7 CREDITS
 SHA1 eea109be181996334ce12d3254eb17f1ebd69b9b FastCalc.xs
 SHA1 d7c83d8f89b92a3262a01eb2778d39402e77263a LICENSE
 SHA1 d7d19f03d83579628cbb89fb3c53586f743e7240 MANIFEST
 SHA1 b84f4d19c93c52aa32e5145cabce4f7e1ccb85a9 MANIFEST.SKIP
-SHA1 5b38a289ef2490a592f8e0d781f04c0559ccd00f META.json
-SHA1 a0057ff185bf0ec29a41604b7733461612df1890 META.yml
-SHA1 2955baac8e21b7f0405889dd6ae82024bbd25d33 Makefile.PL
+SHA1 40ba592d374fe50a24809ae51e8daa45fdf121a4 META.json
+SHA1 e53f08e8784dab83a3adaea7d426d856278bec24 META.yml
+SHA1 e016b86d62e4d2b42e0aabaac7bc091ef1ddfa2c Makefile.PL
 SHA1 e3642759d709f62d10e99d8480e0404ec48965c7 README
 SHA1 ac0c8404bb7a1f8135c59a2b877a968f6e6e5f2e TODO
-SHA1 4c48c0a72634f7b8fe56abd48a430c21cc3557f1 lib/Math/BigInt/FastCalc.pm
+SHA1 7ec0e1a996f6f8fc0a16b67dd007ac3074d86f21 lib/Math/BigInt/FastCalc.pm
 SHA1 385cc7ed3bf3e6290640b9880445ca9a3dea629e t/00sig.t
 SHA1 28eeae311120c5129c4fbd746f128aa1c7235c9e t/01load.t
 SHA1 b2ed9206ca5b69ec3b8bbf850bf4b6dfde518e7e t/02pod.t
@@ -120,11 +120,11 @@ SHA1 74a620fa3317abc2b1383d9194390d30df64bbf0 t/mbimbf.inc
 SHA1 6c804dc12b26f18c5d9416119b2d62783660e07d t/mbimbf.t
 -----BEGIN PGP SIGNATURE-----
 
-iQEcBAEBAgAGBQJYTUoCAAoJEGcmPl2fr1663L8IAMQsx3Sbpr+j290a26FYWVQD
-4kAjFgQ0HsWr6ObgZvn8LajpBYti8edBmLUQ7+DFpEhiVU0PYCQN4F1nl090lBgP
-FeMZJfSGOsZ/cDprXV1U3nllOrMWCHIXZz/ariQ6YQKfstLGGpR6S8827sr472yP
-mZMBi9RLYqc6jO8DMe4GBdt+/3dmtOwI7zVp8noNpQd6rZveGZu2XwOwiFZOYuUF
-0n99duk3NZJ7dAe3Rbf2L2HRhzRAufu0yLOiEIH6E5HT/XOnM+4yFCAmQKh7z3uq
-mgictPuOSid8VjfhFo0GANqwO/emQNOXZpCOZ8xRxiGWARBkyAJPetyxKSgoEnA=
-=XQ3A
+iQEcBAEBAgAGBQJYUE1nAAoJEGcmPl2fr166iaIH/2LJCqd7Sg5qc5P8GQnVQoqr
+gZp8RpdhHS36V/qjYpKNiJVpE7PnJnh/qtEHPl9cDAPgreXHkvimZ2RlVavCgVar
+gQPos5wK8FTQLCunlElaveRBaPLB/Xr3eoPIySESg40nJ4GnmjebOIquyvpevdvR
+fBdQZKhDe5gxa2CjmKVWOyy2TFXak76LsemMuXSdjimX76cluJFxg9jZdfCVms7k
+CGz9F/nUskGm00oSoekGTOKOy1Xkpi9X+xcv6ezRz2jSqWCauQBMAY5UO39DnmiC
+IV9GQS+Ji8U9+4g/ZQeVdPDy30xfaCdOXriGAS6//l4/6QLZJEIJXGH/sEAydFg=
+=+a15
 -----END PGP SIGNATURE-----
